# cnn

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.MD
cmake/: deps.cmake
src/: .gitignore  CMakeLists.txt  cnn.c  cnn.h  cnn_activ.h  cnn_alloc.c  cnn_bn.h  cnn_builtin_math.c  cnn_builtin_math.cu  cnn_builtin_math.h  cnn_builtin_math_cu.h  cnn_builtin_math_inline.h  cnn_calc.c  cnn_calc.cu  cnn_calc.h  cnn_calc_cu.h  cnn_config.c  cnn_config.h.cmake  cnn_conv.cu  cnn_conv.h  cnn_create.c  cnn_cudef.h  cnn_delete.c  cnn_drop.cu  cnn_drop.h  cnn_fc.h  cnn_init.c  cnn_init.cu  cnn_init.h  cnn_init_cu.h  cnn_macro.h  cnn_parse.c  cnn_parse.h  cnn_pool.cu  cnn_pool.h  cnn_private.h  cnn_rbfact.h  cnn_strdef.c  cnn_strdef.h  cnn_text.cu  (+8 more)
test/: CMakeLists.txt  afunc.py  afunc_octave.m  batch_training.m  softmax_octave.m  softmax_regression_octave.m  test.h  test_activ.c  test_activ_func.c  test_activ_perf.c  test_activation.c  test_batchnorm.c  test_batchnorm_cudnn.c  test_batchnorm_perf.c  test_bp.c  test_bp_batch.c  test_bp_perf.c  test_clone.c  test_config_append.c  test_config_clone.c  test_config_clone_stable.c  test_config_cmp.c  test_config_create.c  test_config_create_stable.c  test_config_import.c  test_config_import_stable.c  test_constancy.c  test_conv.c  test_conv_2d.c  test_conv_2d3c.c  test_conv_2d3c_same.c  test_conv_cudnn.c  test_conv_gemm.c  test_conv_perf.c  test_create.c  test_create_stable.c  test_dropout.c  test_dropout_perf.c  test_fc.c  test_fc_perf.c  (+16 more)
